--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
     "morgan": "^1.10.0"
