--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,30 +1,29 @@
 name: Node.js CI
 
 on: 
-    push:
+  push:
     branches: [master]
 
 jobs:
-      build:
+  build:
+    runs-on: ubuntu-latest
 
-      runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v4
 
-steps: 
-   - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.19.0'
 
-   - name: Use Node.js
-     uses: actions/setup-node@v4
-     with:
-     node-version: '18.19.0'
+      - name: Install Node Dependencies
+        run: npm install
 
-  - name: Install Node Dependencies
-     run: npm install
-     run: npm run build --if-present
+      - name: Build (if present)
+        run: npm run build --if-present
 
-  - name: Lint Code
-     run: npm run lint
+      - name: Lint Code
+        run: npm run lint
 
-  - name: Run Tests
-     run: npm test
-
-  
+      - name: Run Tests
+        run: npm test
