failed pipeline test

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build (if present)
         run: npm run build --if-present
 
+      - name: Run Tests
+        run: npm test
+
       - name: Lint Code
         run: npm run lint
     
