--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps: 
-      - uses: actions/checkout@v4
+      # - uses: actions/checkout@v4
+      - run: ls
 
       - name: Use Node.js
         uses: actions/setup-node@v4
