--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,8 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps: 
-      # - uses: actions/checkout@v4
-      - run: ls
+      - uses: actions/checkout@v4
+      
+      - run: |
+          ls
+          git log
 
       - name: Use Node.js
         uses: actions/setup-node@v4
