--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,8 +1,8 @@
 name: Node.js CI
 
 on: 
-  push:
-    branches: [master, solution]
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
@@ -22,11 +22,50 @@ jobs:
 
       - name: Install Node Dependencies
         run: npm install
+      
+      - name: Lint Code
+        id: lint
+        run: npm run lint
+      
+      - name: Run Node test
+        id: test
+        run: npm test
 
       - name: Build (if present)
-        run: npm run build --if-present
+        id: build
+        run: npm run build
+      
+      - name: Archive artifacts
+        id: artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-artifact
+          path: dist
 
-      - name: Lint Code
-        run: npm run lint
+      - name: update Comment on PR
+        uses: actions/github-script@v7
+        with:
+          script: |
+            console.log(context.issue.number)
+            console.log(context.issue)
+            console.log({{ steps.lint}})
+            console.log({{ steps.test}})
+            console.log({{ steps.build}})
+            console.log({{ steps.artifact}})
+            const body = `**Welcome**, new contributor!
+
+            *Pusher: @${{github.actor}}, workflow: ${{github.workflow}}
+
+            Please make sure you've read our [contributing guide](CONTRIBUTING.md) and we look forward to reviewing your Pull request shortly ✨`
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number, //PR ID 
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: body
+            })
+
+      
+
+
 
 
