--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --inspect ./bin/www --exec \"npm run lint && node \"",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "echo 'Testing'"
+
   },
   "keywords": [],
   "author": "",
