fix build issue

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon --inspect ./bin/www --exec \"npm run lint && node \"",
     "lint": "eslint .",
-    "test": "echo 'Testing'"
+    "test": "echo 'Testing'",
+    "build": "node build"
 
   },
   "keywords": [],
