--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Build (if present)
         id: build
         continue-on-error: true
-        run: npm build
+        run: npm run build
       
       - name: Archive artifacts
         id: artifact
