--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mydiary",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "nodemon --inspect ./bin/www --exec \"npm run lint && node \"",
