--- a/package.json
+++ b/package.json
@@ -2,20 +2,19 @@
   "name": "mydiary",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "nodemon --inspect ./bin/www --exec \"npm run lint && node \"",
     "lint": "eslint .",
     "test": "echo 'Testing'",
-    "build": "node build"
-
+    "build": "mkdir dist && babel src -s -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@shypes/language-translator": "^2.0.15",
+    "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -24,10 +23,15 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tsc": "^2.0.4",
+    "typescript": "^5.4.5",
+    "webpack": "^5.92.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "eslint": "^8.15.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "webpack-cli": "^5.1.4"
   }
 }
