--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "morgan": "^1.10.0",
     "tsc": "^2.0.4",
     "typescript": "^5.4.5",
-    "webpack": "^5.92.0"
+    "webpack": "^5.92.0",
+    "babel-cli": "^6.26.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
     "eslint": "^8.15.0",
     "nodemon": "^2.0.16",
     "webpack-cli": "^5.1.4"
