--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,10 @@ jobs:
           node-version: '18.19.0'
 
       - name: Install Node Dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install --save-dev babel-cli
+      
       
       - name: Lint Code
         id: lint
