--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,8 +28,7 @@ jobs:
       - name: Install Node Dependencies
         run: |
           npm install
-          npm install --save-dev babel-cli
-      
+          npm install --only=dev
       
       - name: Lint Code
         id: lint
