--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -50,8 +50,32 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: 'Test Failure',
+              labels: ['testing-failure']
               body: body
             })
+
+      - name: Close Test Issue
+        if: ${{ steps.test.outcome == 'success' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: issues } = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              labels: 'testing-failure',
+            });
+
+            const issue = issues.find(issue => issue.title.includes('${{ github.sha }}'));
+
+            if (issue) {
+              await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                state: 'closed'
+              });
+            }
 
       - name: Build (if present)
         id: build
