--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon --inspect ./bin/www --exec \"npm run lint && node \"",
     "lint": "eslint .",
+    "test": "echo 'Testing'",
     "build": "mkdir dist && babel src -s -d dist"
   },
   "keywords": [],
