--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -59,6 +59,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const label = 'testing-failure';
             const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -66,15 +67,16 @@ jobs:
               labels: 'testing-failure',
             });
 
-            const issue = issues.find(issue => issue.title.includes('${{ github.sha }}'));
 
-            if (issue) {
-              await github.rest.issues.update({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: issue.number,
-                state: 'closed'
-              });
+            if (issues.length > 0) {
+              for (const issue of issues) {
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: issue.number,
+                  state: 'closed'
+                });
+              }
             }
 
       - name: Build (if present)
