--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -45,14 +45,26 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const body = `Tests failed in workflow: ${{ github.workflow }} for commit: ${{ github.sha }}`
-            await github.rest.issues.create({
+            const body = `Test failed in workflow: ${{ github.workflow }};
+            const label = 'testing-failure';
+            const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: 'Test Failure',
-              labels: ['testing-failure'],
-              body: body
-            })
+              state: 'open',
+              labels: label
+            });
+            const existingIssue = issues.find(issue => issue.title === 'Test Failure');
+
+            if(!existingIssue){
+                await github.rest.issues.create({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: 'Test Failure',
+                labels: ['testing-failure'],
+                body: body,
+                assignees: [github.actor]
+              })
+            }
 
       - name: Close Test Issue
         if: ${{ steps.test.outcome == 'success' }}
@@ -83,6 +95,45 @@ jobs:
         id: build
         continue-on-error: true
         run: npm run build
+
+      - name: Check Build Failure
+        if: ${{ steps.test.outcome == 'failure' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const body = `Build failed in workflow: ${{ github.workflow }} for commit: ${{ github.sha }}`
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'Build Failure',
+              labels: ['build-failure'],
+              body: body
+            })
+
+      - name: Close Build Issue
+        if: ${{ steps.test.outcome == 'success' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const label = 'build-failure';
+            const { data: issues } = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              labels: 'build-failure',
+            });
+
+
+            if (issues.length > 0) {
+              for (const issue of issues) {
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: issue.number,
+                  state: 'closed'
+                });
+              }
+            }
       
       - name: Archive artifacts
         id: artifact
