--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const body = `Test failed in workflow: ${{ github.workflow }};
+            const body = `Test failed in workflow: ${{ github.workflow }}`;
             const label = 'testing-failure';
             const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
