--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -47,6 +47,7 @@ jobs:
           script: |
             const body = `Test failed in workflow: ${{ github.workflow }}`;
             const label = 'testing-failure';
+            const assignees = [github.actor] || [];
             const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -62,7 +63,7 @@ jobs:
                 title: 'Test Failure',
                 labels: ['testing-failure'],
                 body: body,
-                assignees: [github.actor]
+                assignees: assignees
               })
             }
 
