--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -47,8 +47,8 @@ jobs:
           script: |
             const body = `Test failed in workflow: ${{ github.workflow }}`;
             const label = 'testing-failure';
-            const assignees = [${{ github.actor }}];
-            console.log(assignees)
+            # const assignees = [${{ github.actor }}];
+            # console.log(assignees)
             const { data: issues } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -64,7 +64,7 @@ jobs:
                 title: 'Test Failure',
                 labels: ['testing-failure'],
                 body: body,
-                assignees: assignees
+                # assignees: assignees
               })
             }
 
