--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -93,7 +93,9 @@ jobs:
       - name: Build (if present)
         id: build
         continue-on-error: true
-        run: npm run build
+        run: |
+          set -eux
+          npm run build
 
       - name: Check Build Failure
         if: ${{ steps.test.outcome == 'failure' }}
