--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -93,9 +93,7 @@ jobs:
       - name: Build (if present)
         id: build
         continue-on-error: true
-        run: |
-          set -eux
-          npm run build
+        run: npm run build
 
       - name: Check Build Failure
         if: ${{ steps.test.outcome == 'failure' }}
