--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -165,7 +165,7 @@ jobs:
                 body: body
               })
             } else{
-              await github.issues.update({
+              await existingIssue.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: body,
