--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,7 @@ jobs:
       contents: write
       pull-requests: write
       repository-projects: write
-      issues: write
+      issues: write|read
 
 
     steps: 
@@ -165,7 +165,7 @@ jobs:
                 body: body
               })
             } else {
-              await github.rest.issues.update({
+              await github.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: body,
