--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -143,7 +143,7 @@ jobs:
       
       - name: Check Test Failure
         if: ${{ steps.test.outcome == 'failure' }}
-        uses: actions/github-script@v7
+        uses: actions/github-script@v6
         with:
           script: |
             const body = `Test failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`;
@@ -165,7 +165,7 @@ jobs:
                 body: body
               })
             } else {
-              await github.issues.update({
+              await github.rest.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: body,
