--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,233 +28,54 @@ jobs:
 
       - name: Install Node Dependencies
         id: install-node
+        continue-on-error: true
         run: |
           npm install
           npm install --only=dev
-
-      - name: Check Install Node Failure
-        if: ${{ steps.install-node.outcome == 'failure' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const body = `Install Node failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`;
-            const label = 'install-node-failure';
-            const assignees = [context.actor];
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-            const existingIssue = issues.find(issue => issue.title === 'Install Node Failure');
-
-            if(!existingIssue){
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Install Node Failure',
-                labels: ['install-node-failure'],
-                body: body,
-                assignees: assignees
-              })
-            }
-
-      - name: Close Install Node Issue
-        if: ${{ steps.install-node.outcome == 'success' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'install-node-failure';
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label,
-            });
-
-
-            if (issues.length > 0) {
-              for (const issue of issues) {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              }
-            }
       
+      - name: Handle Issue for Install Node Dependencies
+        uses: operah24/My-Diary/.github/workflows/handle-issues@workshop-3
+        with:
+          outcome: ${{ steps.install-node.outcome}}
+          label: 'install-node-failure'
+          title: 'Install Node Failure'
+
       - name: Lint Code
         id: lint
+        continue-on-error: true
         run: npm run lint
 
-      - name: Check Lint Failure
-        if: ${{ steps.lint.outcome == 'failure' }}
-        uses: actions/github-script@v7
+      - name: Handle Issue for Lint Failure
+        uses: operah24/My-Diary/.github/workflows/handle-issues@workshop-3
         with:
-          script: |
-            const body = `Lint failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`;
-            const label = 'lint-failure';
-            const assignees = [context.actor];
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-            const existingIssue = issues.find(issue => issue.title === 'Lint Failure');
+          outcome: ${{ steps.lint.outcome}}
+          label: 'lint-failure'
+          title: 'Lint Failure'
 
-            if(!existingIssue){
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Lint Failure',
-                labels: ['lint-failure'],
-                body: body,
-                assignees: assignees
-              })
-            }
-
-      - name: Close Lint Issue
-        if: ${{ steps.lint.outcome == 'success' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'lint-failure';
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label,
-            });
-
-
-            if (issues.length > 0) {
-              for (const issue of issues) {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              }
-            }
-      
       - name: Run Node test
         id: test
         continue-on-error: true
         run: npm test
       
-      - name: Check Test Failure
-        if: ${{ steps.test.outcome == 'failure' }}
-        uses: actions/github-script@v7
+      - name: Handle Issue for Testing Failure
+        uses: operah24/My-Diary/.github/workflows/handle-issues@workshop-3
         with:
-          script: |
-            const body = `Test failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`;
-            const label = 'testing-failure';
-            const assignees = [context.actor];
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-            const existingIssue = issues.find(issue => issue.title === 'Test Failure');
-
-            if(!existingIssue){
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Test Failure',
-                labels: ['testing-failure'],
-                body: body,
-                assignees: assignees
-              })
-            }
-
-      - name: Close Test Issue
-        if: ${{ steps.test.outcome == 'success' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'testing-failure';
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label,
-            });
-
-
-            if (issues.length > 0) {
-              for (const issue of issues) {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              }
-            }
+          outcome: ${{ steps.test.outcome}}
+          label: 'testing-failure'
+          title: 'Testing Failure'
 
       - name: Build (if present)
         id: build
         continue-on-error: true
         run: npm run build
-
-      - name: Check Build Failure
-        if: ${{ steps.build.outcome == 'failure' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const body = `Build failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`
-            const label = 'build-failure';
-            const assignees = [context.actor];
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-
-            const existingIssue = issues.find(issue => issue.title === 'Build Failure');
-
-            if(!existingIssue){
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Build Failure',
-                labels: ['build-failure'],
-                body: body,
-                assignees: assignees
-              })
-            }
-
-      - name: Close Build Issue
-        if: ${{ steps.build.outcome == 'success' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'build-failure';
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-
-
-            if (issues.length > 0) {
-              for (const issue of issues) {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              }
-            }
       
+      - name: Handle Issue for Build Failure
+        uses: operah24/My-Diary/.github/workflows/handle-issues@workshop-3
+        with:
+          outcome: ${{ steps.build.outcome}}
+          label: 'build-failure'
+          title: 'Build Failure'
+
       - name: Archive artifacts
         id: artifact
         uses: actions/upload-artifact@v4
@@ -262,59 +83,13 @@ jobs:
         with:
           name: build-artifact
           path: dist
-
-      - name: Check Artifact Failure
-        if: ${{ steps.artifact.outcome == 'failure' }}
-        uses: actions/github-script@v7
+      
+      - name: Handle Issue for Artifact Failure
+        uses: operah24/My-Diary/.github/workflows/handle-issues@workshop-3
         with:
-          script: |
-            const body = `Artifact failed in workflow: ${{ github.workflow }}, Please investigate the failure and resolve it.`
-            const label = 'artifact-failure';
-            const assignees = [context.actor];
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-
-            const existingIssue = issues.find(issue => issue.title === 'Artifact Failure');
-
-            if(!existingIssue){
-              await github.rest.issues.create({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                title: 'Artifact Failure',
-                labels: ['artifact-failure'],
-                body: body,
-                assignees: assignees
-              })
-            }
-
-      - name: Close Artifact Issue
-        if: ${{ steps.artifact.outcome == 'success' }}
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const label = 'artifact-failure';
-            const { data: issues } = await github.rest.issues.listForRepo({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open',
-              labels: label
-            });
-
-
-            if (issues.length > 0) {
-              for (const issue of issues) {
-                await github.rest.issues.update({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  issue_number: issue.number,
-                  state: 'closed'
-                });
-              }
-            }
+          outcome: ${{ steps.build.outcome}}
+          label: 'artifact-failure'
+          title: 'Artifact Failure'
 
       - name: update Comment on PR
         uses: actions/github-script@v7
