--- a/.github/actions/handle-issues/action.yml
+++ b/.github/actions/handle-issues/action.yml
@@ -15,6 +15,10 @@ inputs:
 runs:
     using: "composite"
     steps:
+        - name: Use Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '18.19.0'
         - name: if task Fail create an issue or comment on the issue
           if: ${{ inputs.outcome == 'failure' }}
           uses: actions/github-script@v7
