--- a/.github/actions/handle-issues/action.yml
+++ b/.github/actions/handle-issues/action.yml
@@ -50,8 +50,9 @@ runs:
                 }
         - name: close issue when outcome is successfully
           if: ${{ inputs.outcome == 'success' }}
-          uses: actions/github-script@v6
+          uses: actions/github-script@v7
           with:
+            github-token: ${{github.token}}
             script: |
                 console.log("load....")
                 # const { data: issues } = await github.rest.issues.listForRepo({
