--- a/.github/actions/handle-issues/action.yml
+++ b/.github/actions/handle-issues/action.yml
@@ -20,12 +20,23 @@ runs:
           uses: actions/github-script@v6
           with:
             script: |
-                console.log("failure....")
+                console.log("Failure...")
         - name: close issue when outcome is successfully
           if: ${{ inputs.outcome == 'success' }}
           uses: actions/github-script@v7
           with:
-            github-token: ${{github.token}}
             script: |
-                console.log("load....")
-                
+                const { data: issues } = await github.rest.issues.listForRepo({
+                    owner: context.repo.owner,
+                    repo: context.repo.repo,
+                    state: 'open',
+                    labels: ${{inputs.label}},
+                });
+                for (const issue of issues) {
+                    await github.rest.issues.update({
+                        owner: context.repo.owner,
+                        repo: context.repo.repo,
+                        issue_number: issue.number,
+                        state: 'closed'
+                    });
+                }
