--- a/.github/actions/handle-issues/action.yml
+++ b/.github/actions/handle-issues/action.yml
@@ -45,7 +45,7 @@ runs:
                 } else {
                     body = `${{inputs.title}} in workflow: ${{ github.workflow }}, 🤪 👋 Thanks for reporting! Oga ade  ${{inputs.error}}`;
                     await github.rest.issues.createComment({
-                        issue_number: issue.number,
+                        issue_number: existingIssue.number,
                         owner: context.repo.owner,
                         repo: context.repo.repo,
                         body: body
